[package]
name = "dapi"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sycer-dev/dapi"
documentation = "https://github.com/sycer-dev/dapi"
description = "a cli app to interact with the discord api"
edition = "2018"
keywords = ["discord", "cli"]
authors = ["Carter Himmel <me@fyko.net>"]

[dependencies]
anyhow = "1"
clap = { version = "2", features = ["yaml"] }
home = "0.5"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
spectacles-model = "0.2.0"
toml = "0.5"